# _AppLauncher

./: README.md  pyproject.toml  setup.py
patisson_appLauncher/: base_app_launcher.py  fastapi_app_launcher.py  printX.py
tests/: test_printX.py
